starting adding frontend

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <input type="button" value="rock">
+    <input type="button" value="paper">
+    <input type="button" value="scissors">
 </body>
 
 <script src="static/main.js"></script>
